# subtrends

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  anthropic.go  bot.go  bot.py  bot_test.go  config.go  config.py  config_test.go  discord.go  go.mod  go.sum  main.go  main.py  openai.go  openai_client.py  openai_test.go  pyproject.toml  reddit.go  reddit_client.py  reddit_test.go  requirements.txt  subtrends.db  telegram.go  utils.go  utils.py  utils_test.go  web.go  webmain.go  webserver.go  websocket.go
.github/workflows/: build-and-push.yml  ci.yml  docker-publish.yml
src/: __init__.py  config.py  main.py
src/clients/: __init__.py  anthropic_client.py  reddit.py  token_cache.py
src/commands/: __init__.py  news.py
src/models/: __init__.py  reddit_types.py
src/services/: __init__.py  news_fetcher.py  rate_limiter.py  summarizer.py
static/css/: style.css
static/js/: app.js
templates/: history.html  index.html  model.html
tests/: test_config.py  test_news_fetcher.py  test_rate_limiter.py  test_reddit_client.py  test_reddit_types.py  test_summarizer.py  test_token_cache.py
